2022-02-04  Arcady Goldmints-Orlov  <agoldmints@igalia.com>

        REGRESSION(r280077): [GTK] It caused 155 new test failures
        https://bugs.webkit.org/show_bug.cgi?id=228153

        Reviewed by Michael Catanzaro.

        Move initializeGtkSettings() from the InjectedBundle to the test runner,
        since GTK settings are automatically propagated from the UI process to
        the web processes.

        * WebKitTestRunner/InjectedBundle/gtk/ActivateFontsGtk.cpp:
        (WTR::activateFonts):
        (WTR::initializeGtkSettings): Deleted.
        * WebKitTestRunner/gtk/main.cpp:
        (initializeGtkSettings):
        (main):

2022-02-04  Ben Nham  <nham@apple.com>

        Add PushDatabase
        https://bugs.webkit.org/show_bug.cgi?id=234194

        Reviewed by Brady Eidson.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebCore/PushDatabase.cpp: Added.
        (TestWebKitAPI::getTopicsByWakeStateSync):
        (TestWebKitAPI::PushDatabaseTest::insertRecord):
        (TestWebKitAPI::PushDatabaseTest::removeRecordByRowIdentifier):
        (TestWebKitAPI::PushDatabaseTest::getRecordByTopic):
        (TestWebKitAPI::PushDatabaseTest::getRecordByBundleIdentifierAndScope):
        (TestWebKitAPI::PushDatabaseTest::getRowIdentifiers):
        (TestWebKitAPI::PushDatabaseTest::getTopicsByWakeState):
        (TestWebKitAPI::operator==):
        (TestWebKitAPI::TEST_F):
        (TestWebKitAPI::makeTemporaryDatabasePath):
        (TestWebKitAPI::TEST):

2022-02-04  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r289067.
        https://bugs.webkit.org/show_bug.cgi?id=236149

        Broke WinCairo LayoutTests

        Reverted changeset:

        "REGRESSION(r288878)
        webkitpy.layout_tests.controllers.layout_test_finder_legacy_unittest.LayoutTestFinderTests
        tests are failing with Windows Python"
        https://bugs.webkit.org/show_bug.cgi?id=236043