@@ -1,3 +1,13 @@
+2022-02-04  Matt Gilligan  <matthew_gilligan@apple.com>
+
+        Add test for the fix in https://bugs.webkit.org/show_bug.cgi?id=235928
+        https://bugs.webkit.org/show_bug.cgi?id=236152
+
+        Reviewed by Tim Horton.
+
+        * TestWebKitAPI/Tests/ios/KeyboardInputTestsIOS.mm:
+        (TestWebKitAPI::TEST):
+
 2022-02-04  Arcady Goldmints-Orlov  <agoldmints@igalia.com>
 
         REGRESSION(r280077): [GTK] It caused 155 new test failures
